book/reports/05_NeuralNetworksForCompImg.log
Traceback (most recent call last):
  File "c:\users\meyjoh\repos\vlcompimg\compimg\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "c:\users\meyjoh\repos\vlcompimg\compimg\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\meyjoh\repos\vlcompimg\compimg\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\meyjoh\repos\vlcompimg\compimg\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\meyjoh\AppData\Local\Programs\Python\Python38\lib\asyncio\base_events.py", line 616, in run_until_complete
    return future.result()
  File "c:\users\meyjoh\repos\vlcompimg\compimg\lib\site-packages\nbclient\client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "c:\users\meyjoh\repos\vlcompimg\compimg\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\meyjoh\repos\vlcompimg\compimg\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
<img src="figures/4/light_path_categories.png" style="max-width:30vw">
------------------

[1;36m  File [1;32m"<ipython-input-9-1642348dfef1>"[1;36m, line [1;32m1[0m
[1;33m    <img src="figures/4/light_path_categories.png" style="max-width:30vw">[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-9-1642348dfef1>, line 1)

